--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="me.lengthmin.dualapp">
+    package="me.lengthmin.coshelper">
 
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DualApp">
         <receiver
-            android:name=".BootReceiver"
+            android:name="me.lengthmin.coshelper.BootReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="1000">
@@ -25,7 +25,7 @@
         </receiver>
 
         <activity
-            android:name=".MainActivity"
+            android:name="me.lengthmin.coshelper.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.DualApp.NoActionBar">
             <intent-filter>
